# Quantum-Sampling-and-Aliasing-Visual-Demonstrator

./: .gitignore  README.md  docker-compose.yml  implementation_plan.md  project_explanation.md  project_review.md  requirements.txt  run_app.py
Microsoft/Windows/PowerShell/: ModuleAnalysisCache
backend/: .env.example  Dockerfile  config.py  experiments.db  main.py  pyproject.toml  signal_engine.py  test_signal_engine.py
backend/Microsoft/Windows/PowerShell/: ModuleAnalysisCache
backend/quantum_engine/: __init__.py  backends.py  circuits.py  job_manager.py  models.py  persistence.py  workflows.py
backend/tests/: test_quantum_engine.py
frontend/: README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/electron/: main.cjs  preload.cjs
frontend/scripts/: dev-webview.mjs  preview-webview.mjs
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AIExplanation.css  AIExplanation.jsx  AliasGhost.jsx  BlochSphere.css  BlochSphere.jsx  BootSequence.css  BootSequence.jsx  ControlPanel.jsx  EnergyGrid.jsx  ErrorOverlay.css  ErrorOverlay.jsx  FFTSpectrum.jsx  QuantumField.jsx  QuantumHUD.css  QuantumHUD.jsx  QuantumMetrics.css  QuantumMetrics.jsx  ReconstructionWave.jsx  RouteErrorBoundary.jsx  SamplingPoints.jsx  Scene.jsx  ShotHistogram.css  ShotHistogram.jsx  SignalRibbon.jsx
frontend/src/hooks/: useAudio.js  useQuantumJobs.js  useQuantumState.js  useWebSocket.js
frontend/src/lib/: network.js  quantumWorkbench.js
frontend/src/pages/: DashboardPage.css  DashboardPage.jsx  LandingPage.css  LandingPage.jsx  (+8 more)
(+17 files in other folders)
